Fixing incorrect sized social card issue on mobile

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -124,7 +124,6 @@
     }
     .socialCard{
         width: 100%;
-        height: 50%;
         margin-bottom: 3rem;
     }
     .socialSVG{
